# ProgrammationGraphique

Cuda/Projet/: Makefile  boxblur.cpp  sobel  sobel-cu
Cuda/Projet/boxblur/: Makefile  boxblur  boxblur-cu  boxblur-streams  boxblur-streams.cu  boxblur.cpp  boxblur.cu
Cuda/Projet/edge_detection/: Makefile  edge_detection-cu  edge_detection-streams  edge_detection-streams.cu  edge_detection.cpp  edge_detection.cu
Cuda/Projet/gaussian_blur/: Makefile  boxblur-streams.cu  gaussian_blur.cpp  gaussian_blur.cu  gaussian_blur_streams.cu
Cuda/Projet/laplacian_gaussian/: Makefile  laplacian_gaussian-cu  laplacian_gaussian-streams  laplacian_gaussian-streams.cu  laplacian_gaussian.cpp  laplacian_gaussian.cu
Cuda/TP1_Cuda/Ex2/: 01-query.cu.save  03-exo3.cu  03-fill.cu  04-exo4.cu  05-exo5.cu  05-exo5.cu.save  exo3  exo4  fill  mostback  query
Cuda/TP2/: .01-exple.cu.swo  01-exo1.cu  01-exple.cu.save  TP2.docx  TP2.pptx  exo1  fill  fillWithStreams.cu
Cuda/TP4/: sobel-cu  sobel.cu
Part1/: CMakeLists.txt
Part1/Common/: .tgz
Part1/Cours1/: CMakeCache.txt  Makefile  cmake_install.cmake  code01_dessin  code01_dessin.cpp  code02_dessin.cpp  code03_dessin.cpp  code04_dessin  code04_dessin.cpp  code05_dessin  code05_dessin.cpp  code05_ico  code05_ico.cpp  icosaedre.hpp  lapin.cpp  modele.cpp  modele.hpp
Part1/Shaders/: ColorFragShader.frag  SimpleFragmentShader.frag  SimpleVertexShader.vert
Part1/TD_Icosaedre/LecteurTraj/: code01_trajectoire  code01_trajectoire.cpp  lecture.cpp  lecture.hpp
tp_opengl/: settings.gradle
tp_opengl/app/: build.gradle
tp_opengl/app/src/androidTest/java/com/example/tp_opengl/: ExampleInstrumentedTest.java
tp_opengl/app/src/main/: AndroidManifest.xml
tp_opengl/app/src/main/java/com/example/tp_opengl/: EndgameActivity.java  MenuActivity.java  MyGLRenderer.java  MyGLSurfaceView.java  OpenGLES30Activity.java  Square.java
tp_opengl/app/src/main/java/com/example/tp_opengl/blocks/: Block.java  IBlock.java  JBlock.java  LBlock.java  OBlock.java  SBlock.java  TBlock.java  ZBlock.java  doubleSquare.java  singleSquare.java  tripleSquare.java
tp_opengl/app/src/main/java/com/example/tp_opengl/constants/: Colors.java
tp_opengl/app/src/main/res/layout/: activity_endgame.xml  activity_main.xml  activity_menu.xml
tp_opengl/app/src/main/res/menu/: menu_main.xml
tp_opengl/app/src/main/res/navigation/: nav_graph.xml
tp_opengl/app/src/main/res/values/: strings.xml  themes.xml
tp_opengl/app/src/main/res/values-night/: themes.xml
tp_opengl/app/src/test/java/com/example/tp_opengl/: ExampleUnitTest.java
tp_opengl/gradle/wrapper/: gradle-wrapper.properties
